2002-09-08  Joe Casadonte  <jcasadonte@northbound-train.com>

	* tnt.el (tnt-supress-pounce-when-away): added new customization option
	* tnt.el (main): added new keybinding (\C-xtL)
	* tnt.el (tnt-pounce-dwim): new function (dwim == Do What I Mean)
	* tnt.el (tnt-pounce-add): will prompt for nick if none given; rebuilds buddy list
	* tnt.el (tnt-pounce-delete): added flag to require match on `completing-read'
	* tnt.el (tnt-pounce-delete): rebuilds buddy list
	* tnt.el (tnt-pounce-list): new function to list pending pounces
	* tnt.el (tnt-send-pounce): added away check
	* tnt.el (tnt-send-pending-pounces-maybe): new function to maybe send pounces
	* tnt.el (tnt-not-away): calls `tnt-send-pending-pounces-maybe'
	* tnt.el (tnt-buddy-list-mode-map): two new keybindings (l, L)

2002-09-08  Joe Casadonte  <jcasadonte@northbound-train.com>

	* tnt.el (propertize): added source comment
	* tnt.el (main): moved global variables up considerably
	* tnt.el (tnt-customize-mode-line-setting): new function to set mode line vars
	* tnt.el (tnt-mode-indicator): added new customization option
	* tnt.el (tnt-show-events-in-mode): added new customization option
	* tnt.el (tnt-show-away-in-mode): added new customization option
	* tnt.el (tnt-show-email-in-mode): added new customization option
	* tnt.el (tnt-beep-on-persistent-messages): added new customization option
	* tnt.el (tnt-shutdown): moved call to `tnt-set-online-state'
	* tnt.el (tnt-show-top-event): added call to `tnt-set-mode-string'
	* tnt.el (tnt-set-online-state): replaced logic with call to `tnt-set-mode-string'
	* tnt.el (tnt-set-mode-string): new function to control mode indicator
	* tnt.el (tnt-toggle-email): added call to `tnt-set-mode-string'
	* tnt.el (tnt-persistent-message-persist): added logic to maybe beep
	* tnt.el (tnt-persistent-message): added explicit clearing of disable-id

2002-09-08  Joe Casadonte  <jcasadonte@northbound-train.com>
