@@ -1,5 +1,11 @@
 2002-09-08  Joe Casadonte  <jcasadonte@northbound-train.com>
 
+	* tnt.el (tnt-kill-window-on-shutdown): added new customization option
+	* tnt.el (tnt-open-or-show-buddies): added new convenience function
+	* tnt.el (tnt-kill): changed to call kill-buffer (maybe)
+
+2002-09-08  Joe Casadonte  <jcasadonte@northbound-train.com>
+
 	* tnt.el (tnt-supress-pounce-when-away): added new customization option
 	* tnt.el (main): added new keybinding (\C-xtL)
 	* tnt.el (tnt-pounce-dwim): new function (dwim == Do What I Mean)
